welcome.lessons.welcome.array.search.MaxValue.scala.error
maxValue:3: error: not found: value max
  for (i <- nums) maximum=max(i,maximum)
                          ^